# MOF-NET

./: .gitignore  README.md  mofnet.py  pyproject.toml  requirements.txt  setup.py
examples/: data_loader_state-20200116.npz  train_mofnet.ipynb
mofnet/: __init__.py  dataset.py  model.py  mofnet.py
