[tool.poetry]
name = "mofnet"
version = "0.1.0"
description = "Predict properties of MOFs from topology and building blocks."
authors = ["Sangwon <lsw91.main@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mofnet"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow = "^2.11.1"
numpy = "^1.24.1"


[tool.poetry.group.dev.dependencies]
pandas = "^1.5.3"
matplotlib = "^3.6.3"
ipykernel = "^6.20.2"
scipy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
